# DeMMO

./: .gitignore  CMakeLists.txt  DeMMO.sln  MMO.sln  README.md  UML.vsdx
Audio/: Audio.vcxproj  Audio.vcxproj.filters
Character/: Character.vcxproj  Character.vcxproj.filters
Client/: Client.vcxproj  README.md
Console/: Console.vcxproj  README.md
Source/: CMakeLists.txt
Source/Audio/: CMakeLists.txt  README.md
Source/Client/: CMakeLists.txt
Source/Console/: CMakeLists.txt
Source/Control/: CMakeLists.txt
Source/DataModel/: CMakeLists.txt  README.md
Source/DataModel/Header/: AssetManager.hpp  EntityIdentifier.hpp
Source/DataModel/Template/: AssetManager.tpp
Source/DirectX/: CMakeLists.txt
Source/Graphics/: CMakeLists.txt
Source/Graphics/Header/: Color.hpp  FragmentShader.hpp  Mesh.hpp  MeshManager.hpp  OBJFactory.hpp  RenderManager.hpp  RenderTarget.hpp  Shader.hpp  VertexShader.hpp
Source/Graphics/Source/: Mesh.cpp  MeshFactory.cpp  OBJFactory.cpp  RenderManager.cpp
Source/Messaging/: CMakeLists.txt
Source/OpenGL/: CMakeLists.txt  StandardShading.fragmentshader  StandardShading.vertexshader
Source/OpenGL/Design/: README.md
Source/OpenGL/Header/: OpenGLRenderManager.hpp  OpenGLWindowManager.hpp
Source/OpenGL/Source/: Main.cpp  OpenGLWindow.cpp
Source/Orchestrator/: CMakeLists.txt  README.md
Source/Orchestrator/Source/: Main.cpp
Source/PersistenceManagement/: CMakeLists.txt
Source/Remote/: CMakeLists.txt
Source/Server/: CMakeLists.txt
Source/UserInterface/: CMakeLists.txt
Source/Vulkan/: CMakeLists.txt  README.md
(+202 files in other folders)
