add_subdirectory ("Audio")
add_subdirectory ("Client")
add_subdirectory ("Console")
add_subdirectory ("Control")
add_subdirectory ("DataModel")
add_subdirectory ("DirectX")
add_subdirectory ("Graphics")
add_subdirectory ("Messaging")
add_subdirectory ("OpenGL")
add_subdirectory ("Orchestrator")
add_subdirectory ("PersistenceManagement")
add_subdirectory ("Remote")
add_subdirectory ("Server")
add_subdirectory ("UserInterface")
add_subdirectory ("Vulkan")